--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@
 /test/version_tmp/
 /tmp/
 backend/tmp/*
+backend/storage/*
+backend/log/
 
 # Used by dotenv library to load environment variables.
 # .env
